Fixed line wrap nit

--- a/css/index.css
+++ b/css/index.css
@@ -130,7 +130,7 @@ div#string-sep {
 /* intro */
 
 section#intro img {
-  width: 160px;
+  width: 180px;
   height: auto;
   margin-right: 50px;
 }
